--- a/metrics/stats.yml
+++ b/metrics/stats.yml
@@ -2,7 +2,7 @@
 - hosts: app
   become: yes
   vars:
-    metrics_storage_ip: 52.59.115.251
+    metric_store_ip: 3.122.118.189
     telegraf_url: https://dl.influxdata.com/telegraf/releases/telegraf-1.8.3-1.x86_64.rpm
   tasks:
     - name: "install telegraf"
