--- a/proxy/nginx_server.conf
+++ b/proxy/nginx_server.conf
@@ -1,13 +1,16 @@
-upstream my_ecommerce_app {
-    server 172.16.100.100:8080;
-    server 172.16.100.101:8080;
-    server 172.16.100.102:8080;
+events { }
+http{ 
+server_names_hash_bucket_size  128;
+upstream cyberforest.tk {
+    server 3.122.118.189:8080;
+  
 }
 
 server {
     listen 80;
-
+    server_name cyberforest.tk;
     location / {
-        proxy_pass http://my_ecommerce_app;
+        proxy_pass http://cyberforest.tk;
     }
+}
 }
